# todo-list-api

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: code-safe.yaml
migrations/: env.py
migrations/versions/: aadfe5128ccd_create_users_table.py
src/: app.py  database.py  security.py  settings.py
src/models/: pagination.py  user.py
src/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
