[project]
name = "todo-list-api"
version = "0.1.0"
description = "To-do list API to manage your tasks."
authors = [
    {name = "AlexdeJesusFS",email = "alexjesus0116@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
pre-commit = "^4.2.0"
pip-audit = "^2.9.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"


# seção para regras de lint e formatação do ruff
[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT", "FAST"]

[tool.ruff.format]
preview = true
quote-style = "single"

# mypy
[tool.mypy]
python_version = "3.13"
exclude = ["^migrations/", "^tests/"]

# seção pytest
[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
lint = "ruff check"
pre-format = "ruff check --fix"
format = "ruff format"
dev = "fastapi dev src/app.py"
pre-test = "task lint"
test = "pytest -s -x --cov=src -vv"
post-test = "coverage html"
pre-commit = "pre-commit run --all-files"
